--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/Portfolio/index.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <header>
@@ -18,23 +18,23 @@
         </nav>
 			</header>
 				<div class="cover-image">
-					<img src="/Portfolio/images/cover.jpg" alt="Cover Image" class="responsive-image">
+					<img src="/images/cover.jpg" alt="Cover Image" class="responsive-image">
 					<div class="text-overlay"> &nbsp;&nbsp;&nbsp;&nbsp; Hi. <br> I'm Joshuar and i love Rabbits.</div>
 				</div>
 				<p class="text-overlay1"> Connect with me <br>
 					<a href="https://www.linkedin.com/in/joshuar-onanuga" target="_blank">
-						<img src="/Portfolio/images/linkedin_icon.png" alt="" class="icon-images">
+						<img src="/images/linkedin_icon.png" alt="" class="icon-images">
 					</a>
 					<a href="https://www.facebook.com/Onanugajoshuar" target="_blank">
-						<img src="/Portfolio/images/facebook_icon.png" alt="" class="icon-images">
+						<img src="/images/facebook_icon.png" alt="" class="icon-images">
 					</a>
-					<img src="/Portfolio/images/instagram_icon.png" alt="" class="icon-images">
+					<img src="/images/instagram_icon.png" alt="" class="icon-images">
 				</p>
 
 				<main>
         <section class="first-content" id="about">
 					<div class="image-div">
-						<img src="/Portfolio/images/josh.jpg" alt="">
+						<img src="/images/josh.jpg" alt="">
 					</div>
 					<div class="text-div">
             <h2>About Me</h2>
@@ -81,7 +81,7 @@
             <h2>Bunnies are just Awesome</h2>
             <div class="project">
                 <h3>American Rabbit</h3>
-								<img src="/Portfolio/images/american-white.jpg" alt="" class="project-image">
+								<img src="/images/american-white.jpg" alt="" class="project-image">
                 <p>Description of project 1.</p>
             </div>
             <div class="project">
@@ -129,6 +129,6 @@
     <footer>
         <p>&copy; 2024 My Portfolio</p>
     </footer>
-    <script src="/Portfolio/index.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 </html>
